#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(adt)
add_subdirectory(api)
add_subdirectory(blockchain)
add_subdirectory(clock)
add_subdirectory(codec)
add_subdirectory(common)
add_subdirectory(crypto)
add_subdirectory(data_transfer)
add_subdirectory(drand)
add_subdirectory(fslock)
add_subdirectory(fsm)
add_subdirectory(host)
add_subdirectory(markets)
add_subdirectory(miner)
add_subdirectory(payment_channel_manager)
add_subdirectory(power)
add_subdirectory(primitives)
add_subdirectory(proofs)
add_subdirectory(sector_storage)
add_subdirectory(storage)
add_subdirectory(vm)
add_subdirectory(sync)
add_subdirectory(node)
