#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(amt)
add_subdirectory(car)
add_subdirectory(chain)
add_subdirectory(compacter)
add_subdirectory(filestore)
add_subdirectory(hamt)
add_subdirectory(in_memory)
add_subdirectory(ipfs)
add_subdirectory(ipld)
add_subdirectory(keystore)
add_subdirectory(leveldb)
add_subdirectory(map_prefix)
add_subdirectory(mpool)
add_subdirectory(piece)
add_subdirectory(unixfs)
