#
# Copyright Soramitsu Co., Ltd. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(actor)
add_subdirectory(dvm)
add_subdirectory(exit_code)
add_subdirectory(fvm)
add_subdirectory(interpreter)
add_subdirectory(message)
add_subdirectory(runtime)
add_subdirectory(state)
add_subdirectory(toolchain)
add_subdirectory(version)
